css styles and visibility fixes - student

--- a/app/frontend/practisebook/public/styles/less/forms.less
+++ b/app/frontend/practisebook/public/styles/less/forms.less
@@ -6,3 +6,10 @@
     color: firebrick
   }
 }
+
+form{
+  h5{
+    color: #666;
+    font-style: italic;
+  }
+}
