--- a/app/frontend/practisebook/public/styles/less/general.less
+++ b/app/frontend/practisebook/public/styles/less/general.less
@@ -36,6 +36,25 @@
   color: @primary-color;
 }
 
+.application_title{
+  font-size: 16px;
+  padding: 10px;
+  color: @primary-color;
+}
+
+.subtitle{
+  color: #666;
+  font-style: italic;
+}
+
+.left3{
+  margin-left:3px;
+}
+
+.right3{
+  margin-right: 3px;
+}
+
 .top15{
   margin-top: 15px;
 }
